--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+}
+
+h1{
+    color: #282828;
+    font-size: 15vmin;
+    text-align: center;
+    padding: 30px 0;
+}
+
+p{
+    font-size: 3vmin;
+    line-height: 2em;
+    letter-spacing: 0.05em;
+    text-align: justify;
+    margin: 50px 0;
+    padding: 0 30px;
+}
+
+.progress{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    position: fixed;
+    top: 20px;
+    right: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    display: grid;
+    place-items: center;
+}
+
+.progress-value{
+    display: block;
+    height: calc(100% - 15px);
+    width: calc(100% - 15px);
+    background-color: #c0c0ff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    font-weight: 500;
 }
